chore: update deprecated features and mark unchecked casts with todo